name:                breakout
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/jrbartowski/breakout.git
license:             BSD3
license-file:        LICENSE
author:              João Rebelo Pires
maintainer:          joaorgpires@gmail.com
copyright:           2018 João Rebelo Pires
category:            Games
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable breakout
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Breakout.AtomicDefinitions,
                       Breakout.Renderer,
                       Breakout.Scoring
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       gloss,
                       containers
